--- a/PS05.html
+++ b/PS05.html
@@ -226,8 +226,14 @@ div.tocify {
 <h1>Collaboration</h1>
 <p>Please indicate who you collaborated with on this assignment:</p>
 </div>
-<div id="load-packages-data-model-formulas" class="section level1">
-<h1>Load packages, data, model formulas</h1>
+<div id="exploratory-data-analysis" class="section level1">
+<h1>Exploratory Data Analysis</h1>
+</div>
+<div id="model-fit" class="section level1">
+<h1>Model Fit</h1>
+</div>
+<div id="create-submission-file" class="section level1">
+<h1>Create Submission File</h1>
 </div>
 
 
