--- a/PS05.html
+++ b/PS05.html
@@ -228,6 +228,7 @@ div.tocify {
 </div>
 <div id="exploratory-data-analysis" class="section level1">
 <h1>Exploratory Data Analysis</h1>
+<p>Information on the competition can be found <a href="https://www.kaggle.com/c/bike-sharing-demand">here</a>.</p>
 </div>
 <div id="model-fit" class="section level1">
 <h1>Model Fit</h1>
